<resources>

    <string name="app_name">RingPublishingTracking Demo</string>

    <!-- Article -->
    <string name="menu_article_push_title">Push</string>
    <string name="menu_article_modal_title">Modal</string>
    <string name="menu_article_add_content_title">Add Content</string>
    <string name="article_dialog_title">Article dialog title</string>
    <string name="article_dialog_message">Article dialog message</string>
    <string name="list_is_from_push">Is from push: %1$s\n\n%2$s</string>
    <string name="epv_audio_button_text">report epv audio</string>
    <string name="epv_video_button_text">report epv video</string>
    <string name="epv_chat_button_text">report epv chat</string>

    <!-- Actions-->
    <string name="button_login">Login</string>
    <string name="button_logout">Logout</string>
    <string name="button_report_user_action_string">Report user action string</string>
    <string name="button_report_user_action_map">Report user action map</string>
    <string name="button_open_detail_from_push">Open detail from push</string>
    <string name="button_open_detail_from_social">Open detail from social</string>
    <string name="button_report_generic_event">Report generic event</string>
    <string name="button_enable_debug_mode">Enable debug mode</string>
    <string name="button_disable_debug_mode">Disable debug mode</string>
    <string name="button_enable_opt_out_mode">Enable OptOut Mode</string>
    <string name="button_disable_opt_out_mode">Disable OptOut Mode</string>
    <string name="button_report_aureus_impression">Report aureus impression</string>
    <string name="button_report_aureus_deboosting">Report aureus deboosting</string>
    <string name="button_update_variant_external_parameters">Update variant external params</string>

    <!-- Paid -->
    <string name="button_show_offer">Show offer</string>
    <string name="button_show_offer_teaser">Show offer teaser</string>
    <string name="button_click_button">Click button</string>
    <string name="button_purchase">Purchase</string>
    <string name="button_show_metric_limit">Show metric limit</string>
    <string name="button_likelihood_scoring">Likelihood scoring</string>
    <string name="button_fake_user_replaced">Fake user replaced</string>

    <!-- Video actions-->
    <string name="button_keep_playing">Keep playing</string>
    <string name="button_paused">Paused</string>
    <string name="button_playing">Playing</string>
    <string name="button_playing_autostart">Playing autostart</string>
    <string name="button_playing_end">Playing end</string>
    <string name="button_playing_start">Playing start</string>
    <string name="button_start">Start</string>

</resources>
