<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <Button
            android:id="@+id/actionStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_start"
            app:layout_constraintEnd_toStartOf="@+id/actionPlayingStart"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/actionPlayingStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_playing_start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/actionStart"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/actionPlayingAutoStart"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/button_playing_autostart"
            app:layout_constraintEnd_toStartOf="@+id/actionPaused"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/actionStart" />

        <Button
            android:id="@+id/actionPaused"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/button_paused"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/actionPlayingAutoStart"
            app:layout_constraintTop_toBottomOf="@+id/actionPlayingStart" />


        <Button
            android:id="@+id/actionPlaying"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/button_playing"
            app:layout_constraintEnd_toStartOf="@+id/actionKeepPlaying"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/actionPlayingAutoStart" />

        <Button
            android:id="@+id/actionKeepPlaying"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/button_keep_playing"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/actionPlaying"
            app:layout_constraintTop_toBottomOf="@+id/actionPaused" />

        <Button
            android:id="@+id/actionPlayingEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/button_playing_end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/actionPlaying" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>