<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/scrollViewContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/articleTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textIsSelectable="true"
                tools:text="Article title" />

            <TextView
                android:id="@+id/articleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textIsSelectable="true"
                tools:text="Article text" />

            <Button
                android:id="@+id/epvAudioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/epv_audio_button_text" />

            <Button
                android:id="@+id/epvVideoButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/epv_video_button_text" />

            <Button
                android:id="@+id/epvChatButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/epv_chat_button_text" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>